2015-11-16  Andy Buckley  <andy.buckley@cern.ch>

	* Add CPPFLAGS steering in Makefile and general code/API tidying.

2015-11-11  Holger Schulz  <holger.schulz@cern.ch>

	* Add any-order long vector calculation, and automatic unit range mapping to Ipol.

2015-11-10  Andy Buckley  <andy.buckley@cern.ch>

	* Add prof2-lsipol as a handy way to make a tuning weights file
	and for general convenience.

2015-10-06  Andy Buckley  <andy.buckley@cern.ch>

	* Add 'make dist' target to Makefile, and tweak/reduce Cython necessity

	* Allow calls to IpolBin and IpolHisto methods with params passed
	as unpacked *args as well as a packed iterable.

	* Add possibility to pass params as an dict-like as well as a list
	or tuple of floats -- note that the dict-like must return
	*ordered* values consistent with the Ipol training. Also ensure
	the float type.

	* Add conversion of C++ exceptions to Python exceptions.

	* Add professor2.utils module, providing an opportunistic use of
	OrderedDict for params so the params order required by Ipol is the
	same as the order in which they are specified in the (first run's)
	params.dat file.

	* Change Python-mapped Ipol methods with no args to be properties.

	* Add nice __repr__ methods for Histo and Bin objects.

	* Specialise Histo as IpolHisto and DataHisto, and provide
	toData{Histo,Bin} on IpolHisto and IpolBin respectively.

	* Remove ProfMaster.

2015-10-04  Andy Buckley  <andy.buckley@cern.ch>

	* Add protection of svd.setThreshold call to ensure it is
	supported/needed, via Eigen version number macros.

	* Add vmin and vmax args to Ipol and IpolBin in Python.

2015-10-02  Andy Buckley  <andy.buckley@cern.ch>

	* Put histo file reading in a try..except block so read failures
	on non-histo files in the run dirs are not fatal.

	* Add protection in the histo loader, so we don't trip up on
	Rivet's new cross-section and counter objects.

2015-09-30  Andy Buckley  <andy.buckley@cern.ch>
