@@ -24,20 +24,21 @@ cdef class Ipol:
     cdef c.Ipol* _ptr
 
     def __cinit__(self, *args):
-        if len(args) == 3 and type(args[0]) is str and type(args[1]) is str and type(args[2]) is str:
+        # NOTE: we shouldn't invent Python-only constructors for a one-off purpose that can be done adequately/better with an explicit call...
+        # if len(args) == 3 and type(args[0]) is str and type(args[1]) is str and type(args[2]) is str:
+        #     self._ptr = new c.Ipol(args[0])
+        #     self._ptr.setMinParamVals([float(x) for x in args[1].split()])
+        #     self._ptr.setMaxParamVals([float(x) for x in args[2].split()])
+        if len(args) == 1 and type(args[0]) is str: # Backward compatibility --- no scaling
             self._ptr = new c.Ipol(args[0])
-            self._ptr.setMinParamVals([float(x) for x in args[1].split()])
-            self._ptr.setMaxParamVals([float(x) for x in args[2].split()])
-        elif len(args) == 1 and type(args[0]) is str: # Backward compatibility --- no scaling
-            self._ptr = new c.Ipol(args[0])
-            self._ptr.setMinParamVals([0 for x in xrange(self._ptr.dim())])
-            self._ptr.setMaxParamVals([1 for x in xrange(self._ptr.dim())])
+            # self._ptr.setMinParamVals([0 for x in xrange(self._ptr.dim())])
+            # self._ptr.setMaxParamVals([1 for x in xrange(self._ptr.dim())])
         else:
             pp = ParamPoints(args[0])
             vals = list(args[1])
             order = int(args[2])
             name = ""
-            threshold = 1e-10 #< ???
+            threshold = 1e-15 #< ???
             if len(args) == 4:
                 try:
                     threshold = float(args[3])
@@ -98,6 +99,20 @@ cdef class Ipol:
 
     ## Alias
     val = value
+
+
+    def setParamLimits(self, pmins, pmaxs):
+        "Set the minimum and maximum param values via 2 lists ordered cf. the param names. Used in SVD internal scaling."
+        self._ptr.setParamLimits(pmins, pmaxs)
+
+    def setMinParamVals(self, pmins):
+        "Set the minimum param values via a list of values ordered cf. the param names. Used in SVD internal scaling."
+        self._ptr.setMinParamVals(pmins)
+
+    def setMaxParamVals(self, pmaxs):
+        "Set the maximum param values via a list of values ordered cf. the param names. Used in SVD internal scaling."
+        self._ptr.setMaxParamVals(pmaxs)
+
 
     def toString(self, name=""):
         "Produce a persistent string representing this Ipol object"
