@@ -1,3 +1,9 @@
+2015-11-18  Andy Buckley  <andy.buckley@cern.ch>
+
+	* Change rescaling I/O behaviour a bit, changing some hacked
+	Python-only string constructors to explicit API improvements and
+	only activating rescaling if DoParamScaling is set true.
+
 2015-11-16  Andy Buckley  <andy.buckley@cern.ch>
 
 	* Add CPPFLAGS steering in Makefile and general code/API tidying.
